[package]
name = "day7"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indexmap = "2.1.0"
nom = "7.1.3"
rstest = "0.18.2"
[[bin]]
name = "part1"
path = "src/part1.rs"
[[bin]]
name = "part2"
path = "src/part2.rs"
